# libperf

./: cabal.haskell-ci  cabal.project  libperf.cabal
.github/workflows/: haskell-ci.yml  perf.yml
include/: HsLibPerf.h
src/: LibPerf.hs
tasty-perfbench/: tasty-perfbench.cabal
tasty-perfbench/bench/: bench-fibo.hs
tasty-perfbench/src/Test/Tasty/: Bench.hs  PerfBench.hs
tests/: libperf-example.hs
