cabal-version:      2.2
name:               libperf
version:            0.1
synopsis:           Bindings to Linux perf_event_open functionality
description:
  A Linux perf counters interfacing library
  .
  https://man7.org/linux/man-pages/man2/perf_event_open.2.html

license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
bug-reports:        https://github.com/haskellari/splitmix/issues
category:           Performance, Benchmarking
build-type:         Simple
tested-with:
  GHC ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.5
   || ==9.4.4

extra-source-files:
  Changelog.md
  include/HsLibPerf.h

source-repository head
  type:     git
  location: https://github.com/phadej/libperf

library
  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
  include-dirs:      include
  exposed-modules:   LibPerf
  build-depends:     base >=4.6 && <4.18
  other-extensions:  CApiFFI
  pkgconfig-depends: libcap

  if !os(linux)
    -- perf is linux only functionality.
    build-depends: unbuildable <0

test-suite libperf-example
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall
  hs-source-dirs:   tests
  main-is:          libperf-example.hs
  build-depends:
    , base
    , libperf
