cabal-version:      2.2
name:               tasty-perfbench
version:            0.1
build-type:         Simple
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2023 Oleg Grenrus, 2021 Andrew Lelechenko
author:             Oleg Grenrus <oleg.grenrus@iki.fi>, Andrew Lelechenko
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
homepage:           https://github.com/phadej/libperf
bug-reports:        https://github.com/phadej/libperf/issues
category:           Development, Performance, Testing, Benchmarking
synopsis:           Featherlight benchmark framework: libperf version
description:
  A @tasty-bench@ fork which uses @libperf@ to measure instruction counts.
  Hopefully the @tasty-bench@, @criterion@, @gauge@ and others
  learn to use @libperf@ themselves.
  .
  @libperf@ is Linux feature. On non-Linux systems this package doesn't work:
  all measurements will be zero.

extra-source-files: changelog.md
tested-with:
  GHC ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.5
   || ==9.4.4

source-repository head
  type:     git
  location: https://github.com/phadej/libperf
  subdir:   tasty-perfbench

library
  exposed-modules:  Test.Tasty.PerfBench
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -fno-warn-unused-imports
  build-depends:
    , base        >=4.6     && <4.18
    , code-page   >=0.2.1   && <0.3
    , containers  >=0.5.0.0 && <0.7
    , deepseq     >=1.3.0.1 && <1.5
    , tasty       >=1.4.0.1 && <1.5

  if !impl(ghc >=7.8)
    build-depends: tagged >=0.8.6.1

  if os(linux)
    build-depends:
      , libperf            >=0.1 && <0.2
      , regression-simple  >=0.2 && <0.3

benchmark bench-fibo
  default-language: Haskell2010
  hs-source-dirs:   bench
  main-is:          bench-fibo.hs
  type:             exitcode-stdio-1.0
  build-depends:
    , base
    , tasty-perfbench

  ghc-options:      -with-rtsopts=-A32m
