cabal-version:      2.2
name:               tasty-perfbench
version:            0.1
build-type:         Simple
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2023 Oleg Grenrus, 2021 Andrew Lelechenko
author:             Oleg Grenrus <oleg.grenrus@iki.fi>, Andrew Lelechenko
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
homepage:           https://github.com/phadej/libperf
bug-reports:        https://github.com/phadej/libperf/issues
category:           Development, Performance, Testing, Benchmarking
synopsis:           Featherlight benchmark framework: libperf version
description:
  A @tasty-bench@ fork which uses @libperf@ to measure instruction counts.
  Hopefully the @tasty-bench@, @criterion@, @gauge@ and others
  learn to use @libperf@ themselves.
  .
  @libperf@ is Linux feature. On non-Linux systems this package doesn't work:
  all measurements will be zero.

extra-source-files: changelog.md
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.5
   || ==9.4.4
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2
   || ==9.14.1

source-repository head
  type:     git
  location: https://github.com/phadej/libperf
  subdir:   tasty-perfbench

library
  exposed-modules:  Test.Tasty.Bench
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -fno-warn-unused-imports
  build-depends:
    , base        >=4.10    && <4.23
    , code-page   >=0.2.1   && <0.3
    , containers  >=0.5.7.1 && <0.9
    , deepseq     >=1.4.4.0 && <1.6
    , tasty       >=1.5.3   && <1.6

  if os(linux)
    build-depends: libperf >=0.1 && <0.2

benchmark bench-fibo
  default-language: Haskell2010
  hs-source-dirs:   bench
  main-is:          bench-fibo.hs
  type:             exitcode-stdio-1.0
  build-depends:
    , base
    , tasty-perfbench

  ghc-options:      "-with-rtsopts=-A32m -T"
